--- a/ourteam.html
+++ b/ourteam.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Restoran-OurTeam</title>
-        <link rel="stylesheet" href="ourteam.css">
+        <link rel="stylesheet" href="css/ourteam.css">
     </head>
     <body>
 
