--- a/testimonial.html
+++ b/testimonial.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Restoran-Testimonial</title>
-        <link rel="stylesheet" href="testimonial.css">
+        <link rel="stylesheet" href="css/testimonial.css">
     </head>
     <body>
 
